Fix dark mode CSS

--- a/public/assets/darkmode.css
+++ b/public/assets/darkmode.css
@@ -93,3 +93,20 @@ a {
 a:visited {
     color: mediumpurple;
 }
+
+#timers {
+  border-color: #eee !important;
+  background-color: gray !important;
+}
+
+#whitetimer {
+  border-color: #000 !important;
+  color: black !important;
+  background-color: white !important;
+}
+
+#blacktimer {
+  border-color: #fff !important;
+  color: white !important;
+  background-color: black !important;
+}
